--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -174,7 +174,7 @@
                             android:layout_centerHorizontal="true"
                             android:layout_centerVertical="true"
                             android:scaleType="fitXY"
-                            android:src="?profileImageIcon" />
+                            tools:src="?profileImageIcon" />
 
                     </RelativeLayout>
 
