--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="@dimen/margin_12"
         android:layout_marginTop="@dimen/margin_5"
         android:layout_toEndOf="@id/image"
-        android:src="?profileImageIcon"
+        tools:src="?profileImageIcon"
         android:visibility="visible" />
 
     <TextView
