--- a/SportsSideKick/app/src/main/res/layout-large/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/friend_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="@dimen/friend_item_image"
         android:layout_height="@dimen/friend_item_image"
         android:layout_centerHorizontal="true"
-        android:src="?profileImageIcon"/>
+        tools:src="?profileImageIcon" />
 
     <ImageView
         android:id="@+id/online_status"
