--- a/SportsSideKick/app/src/main/res/layout-large/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/friend_request_item.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_centerHorizontal="true"
-        android:src="?profileImageIcon"
+        tools:src="?profileImageIcon"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"/>
 
