--- a/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_create_post.xml
@@ -98,7 +98,7 @@
                 android:layout_below="@id/contentImage"
                 android:layout_marginStart="@dimen/margin_15"
                 android:layout_marginTop="@dimen/margin_10"
-                android:src="?profileImageIcon"
+                tools:src="?profileImageIcon"
                 android:visibility="visible" />
 
 
