--- a/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_friend.xml
@@ -155,7 +155,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:scaleType="fitCenter"
-            android:src="?profileImageIcon"
+            tools:src="?profileImageIcon"
             app:layout_constraintBottom_toTopOf="@id/guideline2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@id/guideline3"
