--- a/SportsSideKick/app/src/main/res/layout/include_input_field.xml
+++ b/SportsSideKick/app/src/main/res/layout/include_input_field.xml
@@ -25,7 +25,7 @@
             android:layout_width="@dimen/width_26"
             android:layout_height="@dimen/height_26"
             android:layout_marginStart="@dimen/margin_15"
-            android:src="?profileImageIcon"
+            tools:src="?profileImageIcon"
             android:visibility="gone"
             tools:visibility="visible" />
 
