--- a/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_news.xml
@@ -84,7 +84,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/padding_10"
-                    android:src="?profileImageIcon"
+                    tools:src="?profileImageIcon"
                     android:visibility="gone" />
 
                 <ImageView
@@ -169,7 +169,7 @@
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_8"
-            android:src="?profileImageIcon" />
+            tools:src="?profileImageIcon" />
 
         <TextView
             android:id="@+id/text_comment"
