--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumours.xml
@@ -66,7 +66,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="@dimen/padding_10"
-                    android:src="?profileImageIcon"
+                    tools:src="?profileImageIcon"
                     android:visibility="gone"/>
 
                 <Space
@@ -143,7 +143,7 @@ android:visibility="gone">
     android:layout_marginBottom="@dimen/margin_10"
     android:layout_marginStart="@dimen/margin_10"
     android:layout_marginTop="@dimen/margin_8"
-    android:src="?profileImageIcon"/>
+    tools:src="?profileImageIcon" />
 
 <TextView
     android:id="@+id/text_comment"
