--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -110,7 +110,7 @@
 
                 <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/likes_icon"
-                    android:layout_width="@dimen/width_15"
+                    android:layout_width="@dimen/wall_item_icon_size"
                     android:layout_height="@dimen/height_15"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
