--- a/SportsSideKick/app/src/main/res/values/dimens.xml
+++ b/SportsSideKick/app/src/main/res/values/dimens.xml
@@ -236,4 +236,5 @@
     <dimen name="card_negative_padding">-4dp</dimen>
     <dimen name="item_spacing_wall">30dp</dimen>
     <dimen name="item_spacing_news">16dp</dimen>
+    <dimen name="wall_item_icon_size">15dp</dimen>
 </resources>
