--- a/SportsSideKick/app/src/main/res/layout/row_add_friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_add_friend_item.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPrimaryMediumLight"
-    android:layout_height="@dimen/height_60"
-  >
+    android:layout_height="@dimen/height_60">
 
     <RelativeLayout
         android:id="@+id/image_holder"
