--- a/SportsSideKick/app/src/main/res/layout/popup_language.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_language.xml
@@ -47,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentStart="true"
+        android:visibility="gone"
         android:layout_below="@id/top_toolbar"
         android:background="@color/colorPrimaryAbsoluteDark"
         android:orientation="horizontal">
