--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -11,17 +11,6 @@
     tools:context=".ui.fragment.other.ChatFragment"
     tools:paddingTop="0dp">
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/input_container"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="12dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/logo_fc"
-        android:tint="#dbdbdb" />
-
     <!-- Empty chat info text -->
     <TextView
         android:id="@+id/info_message"
@@ -96,7 +85,23 @@
             android:paddingBottom="48dp"
             android:paddingTop="16dp"
             tools:padding="16dp" />
+
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <ImageView
+        android:id="@+id/logoFanchatImage"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_above="@id/input_container"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="4dp"
+        android:clickable="true"
+        android:focusable="false"
+        android:padding="8dp"
+        android:scaleType="fitEnd"
+        android:src="@drawable/logo_fc"
+        android:tint="#dbdbdb" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -464,18 +469,6 @@
             android:orientation="vertical"
             android:paddingBottom="32dp">
 
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/height_80"
-                android:layout_above="@id/text1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/margin_20"
-                android:contentDescription="@null"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ssk_logo"
-                android:visibility="gone" />
-
             <TextView
                 android:id="@+id/text1"
                 fontPath="fonts/TitilliumWeb-SemiBold.ttf"
@@ -540,14 +533,6 @@
 
             </LinearLayout>
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="52dp"
-            android:layout_height="52dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/logo_fc" />
     </RelativeLayout>
     <!--** ** ** ** **  ** ** ** **  ** ** ** **  ** ** ** **  ** ** ** **  -->
 
