--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -10,6 +10,7 @@
     <RelativeLayout
         android:id="@+id/content_container"
         android:layout_width="wrap_content"
+        android:foreground="?selectableItemBackground"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:padding="6dp"
@@ -29,6 +30,7 @@
         <ImageView
             android:id="@+id/contentImage"
             android:layout_width="wrap_content"
+            android:foreground="?selectableItemBackground"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:maxHeight="@dimen/height_80"
