--- a/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_profile.xml
@@ -123,6 +123,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
+        android:scrollbarStyle="outsideInset"
         android:layout_below="@id/top_buttons_container">
 
         <RelativeLayout
