--- a/SportsSideKick/app/src/main/res/layout/user_stats_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/user_stats_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -12,9 +13,10 @@
         android:layout_weight="1"
         android:ellipsize="end"
         android:gravity="end"
-        android:textSize="@dimen/font_size_12"
         android:lines="1"
-        android:textColor="@color/white" />
+        android:textColor="#686868"
+        android:textSize="@dimen/font_size_12"
+        tools:text="Caps Level" />
 
     <TextView
         android:id="@+id/value"
@@ -22,9 +24,10 @@
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/margin_15"
         android:layout_weight="3"
-        android:textSize="@dimen/font_size_12"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:lines="1"
-        android:textColor="?colorAccent" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/font_size_12"
+        tools:text="52" />
 </LinearLayout>
