--- a/SportsSideKick/app/src/main/res/layout/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    tools:layout_width="70dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="@dimen/margin_10">
 
@@ -26,12 +27,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@id/avatar"
-        android:layout_marginTop="@dimen/margin_5"
         android:ellipsize="end"
         android:gravity="center_horizontal"
-        android:lines="1"
-        android:maxLines="1"
-        android:textColor="?friendItemTextColor"
+        android:maxLines="2"
+        android:textColor="@color/black"
+        tools:text="Test User"
         android:textSize="@dimen/font_size_11"
         android:textStyle="bold" />
 
